# adventofcode_2020

./: CMakeLists.txt  set.hpp  util.cpp  util.hpp
day01/day01_a/: main.cpp
day01/day01_b/: main.cpp
day02/day02_a/: main.cpp
day02/day02_b/: main.cpp
day03/day03_a/: main.cpp
day03/day03_b/: main.cpp
day04/day04_a/: main.cpp
day04/day04_b/: main.cpp
day05/day05_a/: main.cpp
day05/day05_b/: main.cpp
day06/day06_a/: main.cpp
day06/day06_b/: main.cpp
day07/day07_a/: main.cpp
day07/day07_b/: main.cpp
day08/day08_a/: main.cpp
day08/day08_b/: main.cpp
day09/day09_a/: main.cpp
day09/day09_b/: main.cpp
day10/day10_a/: main.cpp
day10/day10_b/: main.cpp
day11/day11_a/: main.cpp
day11/day11_b/: main.cpp
day12/day12_a/: main.cpp
day12/day12_b/: main.cpp
day13/day13_a/: main.cpp
day13/day13_b/: main.cpp
day14/day14_a/: main.cpp
day14/day14_b/: main.cpp
day15/day15_a/: main.cpp
day15/day15_b/: main.cpp
day16/day16_a/: main.cpp
day16/day16_b/: main.cpp
day17/day17_a/: main.cpp
day17/day17_b/: main.cpp
day18/day18_a/: main.cpp
day18/day18_b/: main.cpp
day19/day19_a/: main.cpp
day19/day19_b/: main.cpp
day20/day20_a/: main.cpp
day20/day20_b/: main.cpp
day21/day21_a/: main.cpp
day21/day21_b/: main.cpp
day22/day22_a/: main.cpp
day22/day22_b/: main.cpp
day23/day23_a/: main.cpp
day23/day23_b/: main.cpp
day24/day24_a/: main.cpp
day24/day24_b/: main.cpp
day25/day25_a/: main.cpp
