cmake_minimum_required(VERSION 3.17)
project(adventofcode_2020)

set(CMAKE_CXX_STANDARD 14)

#add_executable(day01_a day01/day01_a/main.cpp util.cpp)
#add_executable(day01_b day01/day01_b/main.cpp util.cpp)
#
#add_executable(day02_a day02/day02_a/main.cpp util.cpp)
#add_executable(day02_b day02/day02_b/main.cpp util.cpp)
#
#add_executable(day03_a day03/day03_a/main.cpp util.cpp)
#add_executable(day03_b day03/day03_b/main.cpp util.cpp)
#
#add_executable(day04_a day04/day04_a/main.cpp util.cpp)
#add_executable(day04_b day04/day04_b/main.cpp util.cpp)
#
#add_executable(day05_a day05/day05_a/main.cpp util.cpp)
#add_executable(day05_b day05/day05_b/main.cpp util.cpp)
#
#add_executable(day06_a day06/day06_a/main.cpp util.cpp)
#add_executable(day06_b day06/day06_b/main.cpp util.cpp)
#
#add_executable(day07_a day07/day07_a/main.cpp util.cpp)
#add_executable(day07_b day07/day07_b/main.cpp util.cpp)
#
#add_executable(day08_a day08/day08_a/main.cpp util.cpp)
#add_executable(day08_b day08/day08_b/main.cpp util.cpp)
#
#add_executable(day09_a day09/day09_a/main.cpp util.cpp)
#add_executable(day09_b day09/day09_b/main.cpp util.cpp)
#
#add_executable(day10_a day10/day10_a/main.cpp util.cpp)
#add_executable(day10_b day10/day10_b/main.cpp util.cpp)
#
#add_executable(day11_a day11/day11_a/main.cpp util.cpp)
#add_executable(day11_b day11/day11_b/main.cpp util.cpp)
#
#add_executable(day12_a day12/day12_a/main.cpp util.cpp)
#add_executable(day12_b day12/day12_b/main.cpp util.cpp)
#
#add_executable(day13_a day13/day13_a/main.cpp util.cpp)
#add_executable(day13_b day13/day13_b/main.cpp util.cpp)
#
#add_executable(day14_a day14/day14_a/main.cpp util.cpp)
add_executable(day14_b day14/day14_b/main.cpp util.cpp)

add_executable(day15_a day15/day15_a/main.cpp util.cpp)
add_executable(day15_b day15/day15_b/main.cpp util.cpp)

add_executable(day16_a day16/day16_a/main.cpp util.cpp)
add_executable(day16_b day16/day16_b/main.cpp util.cpp)

#add_executable(day17_a day17/day17_a/main.cpp util.cpp)
#add_executable(day17_b day17/day17_b/main.cpp util.cpp)

#add_executable(day18_a day18/day18_a/main.cpp util.cpp)
#add_executable(day18_b day18/day18_b/main.cpp util.cpp)

#add_executable(day19_a day19/day19_a/main.cpp util.cpp)
#add_executable(day19_b day19/day19_b/main.cpp util.cpp)

#add_executable(day20_a day20/day20_a/main.cpp util.cpp)
#add_executable(day20_b day20/day20_b/main.cpp util.cpp)

#add_executable(day21_a day21/day21_a/main.cpp util.cpp)
#add_executable(day21_b day21/day21_b/main.cpp util.cpp)

#add_executable(day22_a day22/day22_a/main.cpp util.cpp)
#add_executable(day22_b day22/day22_b/main.cpp util.cpp)

#add_executable(day23_a day23/day23_a/main.cpp util.cpp)
#add_executable(day23_b day23/day23_b/main.cpp util.cpp)

#add_executable(day24_a day24/day24_a/main.cpp util.cpp)
#add_executable(day24_b day24/day24_b/main.cpp util.cpp)

#add_executable(day25_a day25/day25_a/main.cpp util.cpp)
#add_executable(day25_b day25/day25_b/main.cpp util.cpp)
